--- a/nginx/html/xiunobbs/view/htm/footer_nav.inc.htm
+++ b/nginx/html/xiunobbs/view/htm/footer_nav.inc.htm
@@ -1,9 +1,9 @@
-<footer class="text-muted small bg-light py-4 mt-3" id="footer">
+<footer class="text-muted small bg-dark py-4 mt-3" id="footer">
 	<div class="container">
 		<div class="row">
 			<div class="col">
 				<!--{hook footer_footer_left_start.htm}-->
-				Powered by Xiuno BBS
+				Design By MagnetShare
 				<!--{hook footer_footer_left_end.htm}-->
 			</div>
 			<div class="col text-right">
