--- a/nginx/html/xiunobbs/view/htm/post.htm
+++ b/nginx/html/xiunobbs/view/htm/post.htm
@@ -80,14 +80,14 @@
 
 					<div class="d-flex justify-content-between">
 						<div class="attachlist_parent">
-							<a class="small text-left" href="javascript:void(0)">
+							<!-- <a class="small text-left" href="javascript:void(0)">
 								<label class="addattach" id="addattach">
 									<i class="icon-folder-open-o"></i> 
 									<?php echo lang('add_attach');?>
 									<input type="file"  multiple="multiple" class="invisible" />
 								</label>
 							</a>
-							<?php echo post_file_list_html($filelist, TRUE);?>
+							<?php echo post_file_list_html($filelist, TRUE);?> -->
 							<!--{hook post_bottom_right.htm}-->
 						</div>
 						<div class="text-right">
