--- a/nginx/html/xiunobbs/admin/view/htm/header.inc.htm
+++ b/nginx/html/xiunobbs/admin/view/htm/header.inc.htm
@@ -19,9 +19,9 @@
 	<meta name="renderer" content="webkit" />
 	<title><?php echo $header['title'];?></title>
 	
-	<link rel="shortcut icon" href="../view/img/favicon.ico" />
-	<link rel="icon" sizes="32x32" href="../view/img/favicon.ico">
-	<link rel="Bookmark" href="../view/img/favicon.ico" />
+	<link rel="shortcut icon" href="../view/img/favicon.png" />
+	<link rel="icon" sizes="32x32" href="../view/img/favicon.png">
+	<link rel="Bookmark" href="../view/img/favicon.png" />
 	
 	<!--{hook admin_header_bootstrap_before.htm}-->
 	<link rel="stylesheet" href="../view/css/bootstrap.min.css">
