--- a/nginx/html/xiunobbs/install/view/htm/header.inc.htm
+++ b/nginx/html/xiunobbs/install/view/htm/header.inc.htm
@@ -10,9 +10,9 @@
 	<meta name="renderer" content="webkit" />
 	<title><?php echo lang('install_title');?></title>
 	
-	<link rel="shortcut icon" href="../view/img/favicon.ico" />
-	<link rel="icon" sizes="32x32" href="../view/img/favicon.ico">
-	<link rel="Bookmark" href="../view/img/favicon.ico" />
+	<link rel="shortcut icon" href="../view/img/favicon.png" />
+	<link rel="icon" sizes="32x32" href="../view/img/favicon.png">
+	<link rel="Bookmark" href="../view/img/favicon.png" />
 	<link rel="stylesheet" href="../view/css/bootstrap.css">
 	<link rel="stylesheet" href="../view/css/bootstrap-icon.css">
 	<link rel="stylesheet" href="../view/css/bootstrap-bbs.css">
