--- a/nginx/html/xiunobbs/view/htm/header.inc.htm
+++ b/nginx/html/xiunobbs/view/htm/header.inc.htm
@@ -35,9 +35,9 @@
 	
 	<!--{hook header_link_before.htm}-->
 	
-	<link rel="shortcut icon" href="<?php echo $conf['view_url'];?>img/favicon.ico" />
-	<link rel="icon" sizes="32x32" href="<?php echo $conf['view_url'];?>img/favicon.ico">
-	<link rel="Bookmark" href="<?php echo $conf['view_url'];?>img/favicon.ico" />
+	<link rel="shortcut icon" href="<?php echo $conf['view_url'];?>img/favicon.png" />
+	<link rel="icon" sizes="32x32" href="<?php echo $conf['view_url'];?>img/favicon.png">
+	<link rel="Bookmark" href="<?php echo $conf['view_url'];?>img/favicon.png" />
 	
 	<!--{hook header_bootstrap_before.htm}-->
 	<?php $bootstrap_css = !empty($bootstrap_css) ? $bootstrap_css : $conf['view_url']."css/bootstrap.min.css"; ?>
@@ -45,7 +45,7 @@
 	<!--{hook header_bootstrap_after.htm}-->
 	
 	<!--{hook header_bootstrap_bbs_before.htm}-->
-	<?php $bootstrap_bbs_css = !empty($bootstrap_bbs_css) ? $bootstrap_bbs_css : $conf['view_url']."css/bootstrap-bbs.min.css"; ?>
+	<?php $bootstrap_bbs_css = !empty($bootstrap_bbs_css) ? $bootstrap_bbs_css : $conf['view_url']."css/bootstrap-bbs.css"; ?>
 	<link rel="stylesheet" href="<?php echo $bootstrap_bbs_css;?>">
 	<!--{hook header_bootstrap_bbs_after.htm}-->
 	
